[gd_scene load_steps=4 format=3 uid="uid://cye1k4nmg0wgy"]

[ext_resource type="Texture2D" uid="uid://2aibo5rg1cvb" path="res://image/logo_flame.png" id="1_mv1h7"]
[ext_resource type="Script" path="res://scene/item/status_efect.gd" id="1_xon8n"]
[ext_resource type="Texture2D" uid="uid://bqqqwgcvm6ugu" path="res://image/logo_nuke.png" id="2_ht05i"]

[node name="StatusEffect" type="Node2D"]
script = ExtResource("1_xon8n")

[node name="LogoFlame" type="Sprite2D" parent="."]
position = Vector2(24, -8)
scale = Vector2(0.125, 0.125)
texture = ExtResource("1_mv1h7")

[node name="LogoToxic" type="Sprite2D" parent="."]
position = Vector2(22, 10)
scale = Vector2(0.15625, 0.15625)
texture = ExtResource("2_ht05i")
